objects/thankful__ThankfulApiErrorLogs__c.object
<CustomObject>
    <description>Object to store information related to any Thankful Managed Package API Errors</description>
    <fields>
        <fullName>thankful__CaseToProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to CTP record. Will be populated if notifying to a webhook fails</description>
        <inlineHelpText>Reference to CTP record. Will be populated if notifying to a webhook fails</inlineHelpText>
        <label>Case To Process</label>
        <referenceTo>thankful__CasesToProcess__c</referenceTo>
        <relationshipLabel>Thankful API Error Logs</relationshipLabel>
        <relationshipName>ThankfulAPIErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>thankful__ErrorMessage__c</fullName>
        <description>Indicates the error message from Exception</description>
        <inlineHelpText>Indicates the error message from Exception</inlineHelpText>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>thankful__ExceptionType__c</fullName>
        <description>Indicates the Exception Type</description>
        <inlineHelpText>Indicates the Exception Type</inlineHelpText>
        <label>Exception Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>thankful__ProcessImpacted__c</fullName>
        <description>Indicates whether the error happened during the outbound call to thankful API or inbound call from thankful API</description>
        <inlineHelpText>Indicates whether the error happened during the outbound call to thankful API or inbound call from thankful API</inlineHelpText>
        <label>Process Impacted</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queue Preparation</fullName>
                    <default>true</default>
                    <label>Queue Preparation</label>
                </value>
                <value>
                    <fullName>Notify Webhook</fullName>
                </value>
                <value>
                    <fullName>Retrieve Case</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Handling Post/Put Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>thankful__StackTrace__c</fullName>
        <description>Contains the Stack Trace of the Exception Occurred</description>
        <inlineHelpText>Contains the Stack Trace of the Exception Occurred</inlineHelpText>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Thankful API Error Log</label>
    <listViews>
        <fullName>thankful__All</fullName>
        <columns>NAME</columns>
        <columns>thankful__CaseToProcess__c</columns>
        <columns>thankful__ProcessImpacted__c</columns>
        <columns>thankful__ExceptionType__c</columns>
        <columns>thankful__ErrorMessage__c</columns>
        <columns>thankful__StackTrace__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ApiErr-{0000}</displayFormat>
        <label>Thankful API Error Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Thankful API Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>